# easy-efficientdet

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
easy_efficientdet/: __init__.py  anchors.py  boxencoding.py  config.py  efficientdet.py  evaluation.py  factory.py  inference.py  layers.py  losses.py  model.py  quantization.py  training.py  utils.py  visualization.py
easy_efficientdet/_third_party/: __init__.py  decoder.py  efficientnet.py  logging.py  postprocess.py  training.py
easy_efficientdet/_third_party/tf_object_detection_api/: coco_evaluation.py  coco_tools.py  json_utils.py  label_map_util.py  object_detection_evaluation.py  per_image_evaluation.py  standard_fields.py
easy_efficientdet/_third_party/tf_object_detection_api/utils/: metrics.py  np_box_list.py  np_box_list_ops.py  np_box_mask_list.py  np_box_mask_list_ops.py  np_box_ops.py  np_mask_ops.py
easy_efficientdet/data/: augmentation.py  preprocessing.py
easy_efficientdet/tools/: README.md  create_labelmap.py  create_object_detection_dataset.py  dataset_util.py  generate_tfrecord.py
examples/: train_voc_tl.ipynb
tests/unit/: test_config.py
